--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <h1>Website Is Created!!</h1>
   <h1>Hello Bro!!</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam dolores pariatur, temporibus hic cum modi quam sapiente accusantium odio voluptate.</p>
+  <h2>Hello Buddy!! How are you today</h2>
 </body>
 </html>
