--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <h1>Hello Bro!!</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam dolores pariatur, temporibus hic cum modi quam sapiente accusantium odio voluptate.</p>
   <h2>Hello Buddy!! How are you today</h2>
+  <input type="text" placeholder="Hello Buddy">
 </body>
 </html>
