--- a/index.html
+++ b/index.html
@@ -6,8 +6,52 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CodewithAK - Web Development and More Services</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-  
+  <form id="form">
+    <h1>Sign up</h1>
+    <div class="input-box">
+      <input type="text" placeholder="Name" required>
+      <i class="fa-solid fa-user"></i>
+    </div>
+    <div class="input-box">
+      <input type="number" placeholder="Phone Number" required>
+      <i class="fa-solid fa-phone"></i>
+    </div>
+    <div class="input-box">
+      <input type="email" placeholder="Email" required>
+      <i class="fa-solid fa-envelope"></i>
+    </div>
+    <div class="input-box">
+      <input type="password" placeholder="Password" required>
+      <i class="fa-solid fa-key"></i>
+    </div>
+    <div class="sign-btn flex">
+      <button type="submit">Sign up</button>
+      <button type="#">Sign in</button>
+    </div>
+    <div class="or-line flex">
+      <span id="line"></span>
+      <span>OR</span>
+      <span id="line"></span>
+    </div>
+    <div class="icons flex">
+      <div class="icon">
+        <i class="fa-brands fa-google"></i>
+      </div
+      
+      <div class="icon">
+      <i class="fa-brands fa-github"></i>
+      </div>
+      
+      <div class="icon">
+        <i class="fa-brands fa-facebook"></i>
+      </div>
+    </div>
+  </form>
 </body>
 </html>
