--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ src="https://www.youtube.com/embed/tgbNymZ7vqY">
 </iframe>
   <div id="loader-container">
     <div class="text">
-      <p>Get Ready to Sign up</p>
+      <p>Please Wait...</p>
     </div>
     <div class="loader">
       
