--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ src="https://www.youtube.com/embed/tgbNymZ7vqY">
     </div>
   </div>
   <form id="form">
-    <h1>Sign up</h1>
+    <h1>Login</h1>
     <div class="input-box">
       <input type="text" placeholder="Name" required>
       <i class="fa-solid fa-user"></i>
