--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script nomodule src="https://cdn.jsdelivr.net/npm/ionicons@latest/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
-  <form action="https://api.web3forms.com/submit" method="POST" id="form">
+  <form action="https://api.web3forms.com/submit" method="POST">
     <h1>Sign up</h1>
     <input type="hidden" name="access_key" value="ef220acf-1fe4-4909-aba7-59f85b15f27a">
     
