--- a/index.html
+++ b/index.html
@@ -47,5 +47,11 @@
     </div>
   </form>
   <script src="https://web3forms.com/client/script.js" async defer></script>
+  <script>
+    window.onload = function() {
+        // Reset the form fields when the page loads
+        document.getElementById("form").reset();
+    };
+</script>
 </body>
 </html>
