--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Random Color Generator</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  
+  <div id="color-container">
+    
+  </div>
+  <div class="container">
+    <p id="color-code">#fff</p>
+    <button id="btn">Generate Color</button>
+    <button id="copy">Copy</button>
+  </div>
+  <script src="app.js"></script>
 </body>
 </html>
